VM asserts if specified size(x) in .ad is larger than emitted size

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • hs22
    • Affects Version/s: hs22
    • Component/s: hotspot
    • None
    • b02
    • generic
    • generic
    • Not verified

        It was allowed to specify larger size(x) in mach node definition in .ad file than actual emitted instruction size. It was treated as upper bound on instruction size. 7063629 changes broke that, it requires size(x) in mach node definition match the emitted size which reduced flexibility in C2 development.

              Assignee:
              Vladimir Kozlov
              Reporter:
              Vladimir Kozlov
              Votes:
              0 Vote for this issue
              Watchers:
              0 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: