7080431: VM asserts if specified size(x) in .ad is larger than emitted size

Move code from finalize_offsets_and_shorten() to fill_buffer() to restore previous behavior.

Reviewed-by: never